<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Slide Show</string>
    <string name="loading_app">Loading</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>


    <string name="all_slides_removed">All Slides removed. Please add slides to the slide show</string>

    <string name="toast_add">File added %1s</string>
    <string name="toast_already_added">"File already added"</string>
    <string name="toast_remove">Deleted file %1s from slide show</string>
    <string name="toast_error">Failed to deleted file %1$s from slide show</string>

    <string name="prompt_no_slides">No slides found. Please add slides to the slide show</string>
    <string name="prompt_welcome">Welcome to the slideshow app. Double tap the screen to access slideshow options.</string>
    <string name="add">Add</string>
    <string name="add_defaults">Add Default Images</string>

    <string name="content_description_slide">Slide Image</string>
    <string name="content_description_info">Info</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_icon">Icon</string>
    <string name="content_description_right_arrow">Right Arrow</string>
    <string name="content_description_left_arrow">Left Arrow</string>
    <string name="content_description_settings">Settings</string>

    <string name="title_activity_slide_show_options">Slide show options</string>
    <string name="title_activity_add_slide">Select a file to add to the slide show</string>
    <string name="title_activity_remove_slide">Select a file to delete from the slide show</string>

    <string name="action_options">Slideshow options</string>
    <string name="action_add">Add slides</string>
    <string name="action_remove">Remove slides</string>
    <string name="action_return">Return to slideshow</string>

    <string name="duration">Slide Duration</string>
    <string name="fade_duration">Fade Duration</string>
    <string name="controllable">Controllable</string>

    <string name="second">%s second"</string>
    <string name="seconds">%s seconds</string>
    <string name="minute">%s minute</string>

    <string name="ad_blurb">I you like this application and want to support the developer click the following button to watch a short advertisement</string>
    <string name="ad_button">Watch Ad Video</string>

    <string name="banner_ad_unit_id">ca-app-pub-1275450301532876/4609983603</string>
    <string name="title_activity_ad">Ad</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad</string>
    <string name="start_level">Ad No. 1</string>
    <string name="next_level">Next Ad</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1275450301532876/6063649585</string>
</resources>
