<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jfleischer.slideshow.SlideShowOptionsActivity">
    <item
        android:id="@+id/action_options"
        android:orderInCategory="100"
        android:title="@string/action_options"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/action_remove"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_return"
        android:orderInCategory="100"
        android:title="@string/action_return"
        app:showAsAction="never" />
</menu>
