<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SlideShowOptionsActivity">

    <!--<GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2">

        <TextView
            android:labelFor="@+id/duration_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Slide duration (milliseconds)" />

        <EditText
            android:id="@+id/duration_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:labelFor="@+id/fade_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fade duration (milliseconds)" />

        <EditText
            android:id="@+id/fade_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />



        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset application" />-->

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"

        ads:adUnitId="@string/banner_ad_unit_id" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"
                    android:text="@string/duration" />
                <Spinner
                    android:id="@+id/duration_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"
                    android:text="@string/fade_duration" />
                <Spinner
                    android:id="@+id/fade_duration_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />
            </LinearLayout>
            <Switch
                android:id="@+id/controllable_switch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/controllable" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/ad_blurb" />
            <Button
                android:id="@+id/ad_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/ad_button"/>
            
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
    
    
        </LinearLayout>

    


    </ScrollView>


</RelativeLayout>