<?xml version="1.0" encoding="utf-8"?>
<com.jfleischer.slideshow.views.SlideShowView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slide_show_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/back_slide_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <include
            android:id="@+id/back_gifViewCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            layout="@layout/slide_gif"/>

        <include android:id="@+id/back_imageViewCont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            layout="@layout/slide_image"/>

        <include
            android:id="@+id/back_video_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/slide_video"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/front_slide_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <include
            android:id="@+id/front_gifViewCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            layout="@layout/slide_gif"/>

        <include android:id="@+id/front_imageViewCont"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            layout="@layout/slide_image"/>

        <include
            android:id="@+id/front_video_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/slide_video"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/slide_show_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/slide_show_right_arrow"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="#07000000"
            android:src="@drawable/arrow_right"
            android:visibility="gone"
            android:contentDescription="@string/content_description_right_arrow" />

        <ImageButton
            android:id="@+id/slide_show_left_arrow"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="#07000000"
            android:src="@drawable/arrow_left"
            android:visibility="gone"
            android:contentDescription="@string/content_description_left_arrow" />

        <ImageButton
            android:id="@+id/slide_show_settings"
            android:layout_width="100dp"
            android:scaleType="fitCenter"
            android:paddingTop="10dp"
            android:layout_height="85dp"
            android:visibility="gone"
            android:paddingBottom="20dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:src="@drawable/settings_black"

            android:contentDescription="@string/content_description_settings" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/slide_show_progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"/>
</com.jfleischer.slideshow.views.SlideShowView>
